--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
   },
   "homepage": "https://github.com/webdxd/open-commerce#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
-    "mongoose": "^4.8.1"
+    "jsonwebtoken": "^7.2.1",
+    "mongoose": "^4.8.1",
+    "morgan": "^1.8.0"
   }
 }
